C:\Users\INTEL\Downloads\Api-inventory
agregar y quitar  con filtrado de fecha y tipo de movimiento

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,9 @@
-<div class="container">
-    <h1 class="heading text-danger">¡Bienvenido a nuestro sitio!</h1>
-    <div class="animation-container">
-      <div class="circle circle-1"></div>
-      <div class="circle circle-2"></div>
-      <div class="circle circle-3"></div>
-    </div>
+<div class="container text-center">
+  <h1 class="heading">¡Bienvenido a nuestro sitio!</h1>
+  <div class="animation-container">
+    <div class="circle circle-1"></div>
+    <div class="circle circle-2"></div>
+    <div class="circle circle-3"></div>
   </div>
+</div>
 
