--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,9 +1,10 @@
-<nav class="navbar">
+<nav class="navbar mb-5">
     <div class="logo"><a href="">Almacen</a></div>
     <ul class="links">
         <li><a [routerLink]="['/pages/home']">Home</a></li>
         <li><a [routerLink]="['/pages/about']">about</a></li>
         <li><a [routerLink]="['/pages/productos']">Productos</a></li>
+        <li><a [routerLink]="['/pages/logs']">Logs</a></li>
     </ul>
     <div class="current-date-time">
         <div class="clock">
