--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -1,47 +1,44 @@
-<div class="container bg-primary rounded-5">
-  <h1 class="d-flex justify-content-center">Registrar Productos</h1>
+<div class="container rounded-5 p-4">
   <div class="row">
-    <div class="row my-4">
-      <div class="col-lg-8 col-md-6">
-        <button type="button" class="btn btn-success my-4" data-bs-toggle="modal" data-bs-target="#addProductModal">Agregar Producto</button>
-        <div class="input-group mb-3">
-          <span class="input-group-text" id="basic-addon1">Buscar</span>
-          <input type="text" class="form-control" placeholder="Nombre o código" aria-label="Nombre o código" aria-describedby="basic-addon1" [(ngModel)]="filtro" (input)="filtrarProductos()">
-        </div>
+    <div class="col-lg-8 col-md-6">
+      <button type="button" class="btn btn-success mb-3" data-bs-toggle="modal" data-bs-target="#addProductModal">Agregar Producto</button>
+      <div class="input-group">
+        <span class="input-group-text bg-white text-primary" id="basic-addon1">Buscar</span>
+        <input type="text" class="form-control" placeholder="Nombre o código" aria-label="Nombre o código" aria-describedby="basic-addon1" [(ngModel)]="filtro" (input)="filtrarProductos()">
       </div>
     </div>
-    <!-- Columna de los productos guardados -->
-    <div class="col-lg-12 col-md-6">
-      <div class="mt-4">
-        <h2 class="text-center">Productos Guardados</h2>
-        <table class="table table-danger">
-          <thead>
-            <tr>
-              <th scope="col">Código</th>
-              <th scope="col">Imagen</th>
-              <th scope="col">Nombre</th>
-              <th scope="col">Detalles</th>
-              <th scope="col">Stock</th>
-              <th scope="col">Precio</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let product of filteredProducts" class="table-info">
-              <th scope="row">{{ product.codigo }}</th>
-              <td><img [src]="imageUrl(product)" alt="Imagen del producto" width="100"></td>
-              <td>{{ product.nombre }}</td>
-              <td>{{ product.detalles}}</td>
-              <td>{{ product.stock }}</td>
-              <td>{{ product.precio }}</td>
-              <td>
-                <button class="btn btn-outline-danger me-2" (click)="eliminarProducto(product.codigo)">Delete</button>
-                <button class="btn btn-outline-primary" (click)="editarProducto(product.codigo,product)">Editar</button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+  </div>
+  <!-- Columna de los productos guardados -->
+  <div class="col-lg-12 col-md-6">
+    <div class="mt-4">
+      <h2 class="text-center text-white">Productos Guardados</h2>
+      <table class="table table-striped table-hover">
+        <thead class="table-danger">
+          <tr>
+            <th scope="col">Código</th>
+            <th scope="col">Imagen</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Detalles</th>
+            <th scope="col">Stock</th>
+            <th scope="col">Precio</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let product of filteredProducts" class="table-info">
+            <th scope="row">{{ product.codigo }}</th>
+            <td><img [src]="imageUrl(product)" alt="Imagen del producto" width="100"></td>
+            <td>{{ product.nombre }}</td>
+            <td>{{ product.detalles }}</td>
+            <td>{{ product.stock }}</td>
+            <td>{{ product.precio }}</td>
+            <td>
+              <button class="btn btn-outline-danger me-2" (click)="eliminarProducto(product.codigo)">Eliminar</button>
+              <button class="btn btn-outline-primary" (click)="editarProducto(product.codigo, product)">Editar</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
@@ -50,50 +47,42 @@
 <div class="modal fade" id="addProductModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
+      <div class="modal-header bg-primary text-white">
         <h5 class="modal-title" id="exampleModalLabel">Agregar Producto</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body bg-info">
-        <div class="col-lg-12">
-          <form [formGroup]="formProductos" (ngSubmit)="onSubmit()" nctype="multipart/form-data">
-            <div class="form-group">
-              <label for="codigo">Código:</label>
-              <input type="number" class="form-control" placeholder="Código" formControlName="codigo">
-            </div>
-            <div class="form-group ">
-              <label for="nombre">Nombre:</label>
-              <input type="text" class="form-control" placeholder="Nombre" formControlName="nombre">
-            </div>
-            <div class="form-group">
-              <label for="nombre">Detalles:</label>
-              <input type="text" class="form-control" placeholder="Detalles" formControlName="detalles">
-            </div>
-            <div class="form-group">
-              <label for="stock">Stock:</label>
-              <input type="number" class="form-control" placeholder="Stock" formControlName="stock">
-            </div>
-            <div class="form-group">
-              <label for="precio">Precio:</label>
-              <input type="number" class="form-control" placeholder="Precio" formControlName="precio">
-            </div>
-            <div class="form-group">
-              <label for="imagen">Imagen:</label>
-              <input type="file" class="form-control"  formControlName="imagen" (change)="onFileChange($event)">
-            </div>
-            <button type="submit" class="btn btn-danger my-4">Guardar</button>
-          </form>
-        </div>
+      <div class="modal-body">
+        <form [formGroup]="formProductos" (ngSubmit)="onSubmit()" nctype="multipart/form-data">
+          <div class="form-group">
+            <label for="codigo" class="text-white">Código:</label>
+            <input type="number" class="form-control" placeholder="Código" formControlName="codigo">
+          </div>
+          <div class="form-group">
+            <label for="nombre" class="text-white">Nombre:</label>
+            <input type="text" class="form-control" placeholder="Nombre" formControlName="nombre">
+          </div>
+          <div class="form-group">
+            <label for="detalles" class="text-white">Detalles:</label>
+            <input type="text" class="form-control" placeholder="Detalles" formControlName="detalles">
+          </div>
+          <div class="form-group">
+            <label for="stock" class="text-white">Stock:</label>
+            <input type="number" class="form-control" placeholder="Stock" formControlName="stock">
+          </div>
+          <div class="form-group">
+            <label for="precio" class="text-white">Precio:</label>
+            <input type="number" class="form-control" placeholder="Precio" formControlName="precio">
+          </div>
+          <div class="form-group">
+            <label for="imagen" class="text-white">Imagen:</label>
+            <input type="file" class="form-control" formControlName="imagen" (change)="onFileChange($event)">
+          </div>
+          <button type="submit" class="btn btn-danger mt-3">Guardar</button>
+        </form>
       </div>
     </div>
   </div>
 </div>
-
-
-
-
-   
-    
 
 
     
