--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<div class="container vh-100 overflow-hideden">
   <h1 class="heading">¡Bienvenido a nuestro sitio!</h1>
   <div class="animation-container">
     <div class="circle circle-1"></div>
