--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    width: 100%;
   }
   
   .heading {
@@ -48,3 +49,4 @@
     }
   }
   
+ 
